--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,6 +13,15 @@ html {
   }
 }
 
+@keyframes noise-anim-2{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(100)+px,9999px,random(100)+px,0);
+    }
+  }
+}
+
 body {
   background-color: var(--site-primary-background-color);
   font-family: var(--site-primary-font-family);
@@ -24,43 +33,26 @@ body {
   color: var(--site-primary-font-color);
   margin: 0;
   position: relative;
-}
 
-.glitch:after{
-  animation:noise-anim 2s infinite linear alternate-reverse;
-  background-color: var(--site-primary-background-color);
-  clip:rect(0,900px,0,0);
-  color: #242424;
-  content:attr(data-text);
-  left:2px;
-  overflow:hidden;
-  pointer-events: none;
-  position:absolute;
-  text-shadow:-1px 0 black;
-  top:0;
-  width: 100%;
-}
-
-@keyframes noise-anim-2{
-  $steps:20;
-  @for $i from 0 through $steps{
-    #{percentage($i*(1/$steps))}{
-      clip:rect(random(100)+px,9999px,random(100)+px,0);
-    }
+  &:after, &:before {
+    background-color: var(--site-primary-background-color);
+    clip:rect(0,900px,0,0);
+    color: #242424;
+    content:attr(data-text);
+    left:2px;
+    overflow:hidden;
+    pointer-events: none;
+    position:absolute;
+    text-shadow:-1px 0 black;
+    top:0;
+    width: 100%;
   }
-}
 
-.glitch:before{
-  animation: noise-anim-2 3s infinite linear alternate-reverse;
-  background-color: var(--site-primary-background-color);
-  clip: rect(0,900px,0,0);
-  color: #242424;
-  content: attr(data-text);
-  left: -2px;
-  overflow: hidden;
-  pointer-events: none;
-  position: absolute;
-  text-shadow: 1px 0 #505050;
-  top: 0;
-  width: 100%;
+  &:after {
+    animation:noise-anim 2s infinite linear alternate-reverse;
+  }
+
+  &:before {
+    animation: noise-anim-2 3s infinite linear alternate-reverse;
+  }
 }
